Chapter 3 — Listing 3.3: PaymentProcessorInterface.java Demonstrates: functional interfaces used as behavioral blueprints,